# notas-proyecto/src/routes/external.js
@@ -1,0 +1,8 @@
+const { Router } = require('express');
+const { getExternalFact } = require('../controllers/external');
+
+const router = Router();
+
+router.get('/fact', getExternalFact);
+
+module.exports = router;
